// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Author component 1`] = `
<div>
  <h2>
    Authors
  </h2>
</div>
`;

exports[`renders name and authorlist after the component mount 1`] = `
<div>
  <h2>
    Authors
  </h2>
  <li>
    Harry Potter author
  </li>
</div>
`;
